objects/EmployeeAddressDocumentType__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <referenceTo>EmployeeAddress__c</referenceTo>
        <relationshipLabel>Employee Address Document Types</relationshipLabel>
        <relationshipName>EmployeeAddressDocumentTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Document Type</label>
        <referenceTo>Documenttype__c</referenceTo>
        <relationshipLabel>Employee Address Document Types</relationshipLabel>
        <relationshipName>EmployeeAddressDocumentTypes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeAddressDocumentTypeEID__c</fullName>
        <description>The Enterprise ID for this Employee Address Document Type.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Employee Address Document Type.</inlineHelpText>
        <label>Employee Address Document Type EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Employee Address Document Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Employee Address Document Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Address Document Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>